@@ -174,6 +174,7 @@ The following commands are accepted before the form is displayed:
 *FvwmFormPosition
 *FvwmFormSelection
 *FvwmFormText
+*FvwmFormTitle
 *FvwmFormUseData
 *FvwmFormWarpPointer
 .EE
@@ -311,6 +312,12 @@ Displays \fIstring\fP as plain text.
 Line breaks must be achieved by multiple *FvwmFormLine and *FvwmFormText
 options.
 Blanks may be used to provide extra padding between items.
+.TP 4
+.B *FvwmFormTitle "\fIstring\fP"
+Displays \fIstring\fP as the window's title.  The string
+must be enclosed in double quotes.  Using this command with anything
+other than a string enclosed in quotes creates a blank title.
+If this command is not used, the window title is the form alias.  
 .TP 4
 .B *FvwmFormInput \fIname\fP \fIsize\fP "\fIinit_string\fP"
 Specifies a text input item with name \fIname\fP.
