@@ -1,7 +1,12 @@
+Tue Aug 31 13:09:47 1999  DanEspen  <dje@blue>
+
+	* FvwmForm/FvwmForm.1, FvwmForm/FvwmForm.c: Allow the user to set
+ 	the window title.
+
 1999-08-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.c (recursive_change_colorset): fixed
-	backgorund of swallowed apps without colour sets
+	background of swallowed apps without colour sets
 
 1999-08-31  Dominik Vogt  <dominik_vogt@gmx.de>
 
